--- a/src/pages/ProfilePage/ProfilePage.module.css
+++ b/src/pages/ProfilePage/ProfilePage.module.css
@@ -1,5 +1,20 @@
+.container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: space-evenly;
+    align-items: stretch;
+}
+
+.description {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
 .badges {
-    height: 50px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -8,4 +23,5 @@
     justify-content: center;
     align-items: center;
     overflow-y: auto;
+    padding-bottom: 8px;
 }
