--- a/src/pages/UserPage/UserPage.module.css
+++ b/src/pages/UserPage/UserPage.module.css
@@ -1,5 +1,20 @@
+.container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: space-evenly;
+    align-items: stretch;
+}
+
+.description {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
 .badges {
-    height: 50px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -8,6 +23,14 @@
     justify-content: center;
     align-items: center;
     overflow-y: auto;
+}
+
+.buttons {
+    padding-top: 8px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    gap: 8px;
 }
 
 .about {
